Remove placeholder leads — dashboard now shows only real Airtable data

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -720,126 +720,7 @@ const AT_BASE     = window.AIRTABLE_BASE  || '';
 const AT_TABLE    = window.AIRTABLE_TABLE || '';
 
 let nextId = 100;
-let leads = [
-  // ── Placeholder — replaced on load ──
-  { id:1, name:'Loading…', source:'form1', lp:'LP1',
-    phone:'(415) 555-0123', email:'sarah.j@gmail.com',
-    subject:'Quotation: 12 windows, 2 stories, Residential — $180',
-    value:180, status:'new', date:'Aug 16, 2024 1:30 PM',
-    address:'123 Oak Ave, Residential', jobType:'Residential',
-    windows:12, starred:false, notes:'', hasCall:false, progress:15 },
-
-  { id:2, name:'Mark Lee', source:'call', lp:null,
-    phone:'(415) 555-0199', email:'marklee@email.com',
-    subject:'Window cleaning inquiry — residential property',
-    value:0, status:'new', date:'Aug 16, 2024 1:30 PM',
-    address:'456 Oak Rd, Residential', jobType:'Residential',
-    windows:3, duration:'2:15', starred:false, notes:'', hasCall:true, progress:10 },
-
-  { id:3, name:'Maria Garcia', source:'form2', lp:'LP2',
-    phone:'(415) 555-0456', email:'m.garcia@mail.com',
-    subject:'Inquire: Glass panel cleaning, commercial space, $220',
-    value:220, status:'new', date:'Aug 16, 2024 2:00 PM',
-    address:'789 Market St, Commercial', jobType:'Commercial',
-    windows:8, starred:true, notes:'', hasCall:false, progress:15 },
-
-  { id:4, name:'James Davies', source:'call', lp:null,
-    phone:'(415) 555-0789', email:'james.d@email.com',
-    subject:'Residential quote — 2-story house, 10 windows',
-    value:0, status:'new', date:'Aug 16, 2024 3:00 PM',
-    address:'321 Maple Ave', jobType:'Residential',
-    windows:10, duration:'1:05', starred:false, notes:'', hasCall:true, progress:10 },
-
-  { id:5, name:'Local Office', source:'call', lp:null,
-    phone:'(415) 555-1010', email:'info@localoffice.com',
-    subject:'Commercial building, all 4 floors, regular monthly service',
-    value:0, status:'new', date:'Aug 16, 2024 4:00 PM',
-    address:'100 Business Blvd, Commercial', jobType:'Commercial',
-    windows:40, duration:'4:50', starred:false, notes:'', hasCall:true, progress:10 },
-
-  // ── Contacted ──
-  { id:6, name:'Alex Brown', source:'form1', lp:'LP1',
-    phone:'(415) 555-2020', email:'alex.b@email.com',
-    subject:'Quotation for single-story home, 6 windows',
-    value:250, status:'contacted', date:'Aug 15, 2024 9:00 AM',
-    address:'50 Pine St', jobType:'Residential',
-    windows:6, starred:false, notes:'Sent quote via email.', hasCall:false,
-    tag:'Sent Quote', progress:35 },
-
-  { id:7, name:'Emily Chen', source:'call', lp:null,
-    phone:'(415) 555-3030', email:'emily.c@email.com',
-    subject:'Called for residential window cleaning estimate',
-    value:0, status:'contacted', date:'Aug 15, 2024 11:00 AM',
-    address:'22 Birch Ln', jobType:'Residential',
-    windows:5, duration:'0:58', starred:false, notes:'Call back tomorrow morning.', hasCall:true,
-    tag:'Call back tomorrow', progress:30 },
-
-  { id:8, name:'Robert Hall', source:'form2', lp:'LP2',
-    phone:'(415) 555-4040', email:'r.hall@email.com',
-    subject:'Scheduled site visit for commercial property assessment',
-    value:0, status:'contacted', date:'Aug 15, 2024 2:30 PM',
-    address:'500 Commerce Way, Commercial', jobType:'Commercial',
-    windows:20, starred:false, notes:'Site visit booked for Aug 18.', hasCall:false,
-    tag:'Site visit booked', progress:30 },
-
-  // ── Quoted ──
-  { id:9, name:'Linda White', source:'form1', lp:'LP1',
-    phone:'(415) 555-5050', email:'linda.w@email.com',
-    subject:'2-story residential, inside & outside, 14 windows',
-    value:150, status:'quoted', date:'Aug 14, 2024 10:00 AM',
-    address:'77 Cedar Ct, Residential', jobType:'Residential',
-    windows:14, starred:false, notes:'Quote sent Aug 15. Awaiting reply.', hasCall:false,
-    tag:'Sent 8/15', progress:55 },
-
-  { id:10, name:'Daniel Smith', source:'call', lp:null,
-    phone:'(415) 555-6060', email:'d.smith@email.com',
-    subject:'2-story residential — exterior only, gutters included',
-    value:310, status:'quoted', date:'Aug 14, 2024 11:30 AM',
-    address:'33 Willow Dr', jobType:'Residential',
-    windows:12, duration:'3:20', starred:false, notes:'Quote sent Aug 14. Following up Aug 18.', hasCall:true,
-    tag:'Sent 8/14', progress:55 },
-
-  // ── Scheduled ──
-  { id:11, name:'Karen Evans', source:'form1', lp:'LP1',
-    phone:'(415) 555-7070', email:'k.evans@email.com',
-    subject:'Standard residential window cleaning, single-story',
-    value:280, status:'scheduled', date:'Aug 13, 2024 8:00 AM',
-    address:'12 Lakeview Dr, Residential', jobType:'Residential',
-    windows:8, starred:true, notes:'Confirmed. Job on Aug 18 10 AM.', hasCall:false,
-    jobDate:'Aug 18, 10:00 AM', progress:75 },
-
-  { id:12, name:'John Reed', source:'call', lp:null,
-    phone:'(415) 555-8080', email:'john.r@email.com',
-    subject:'Residential exterior window cleaning + screen wash',
-    value:195, status:'scheduled', date:'Aug 13, 2024 1:00 PM',
-    address:'88 Sunset Blvd', jobType:'Residential',
-    windows:6, duration:'2:40', starred:false, notes:'Booked for Aug 19 2 PM.', hasCall:true,
-    jobDate:'Aug 19, 2:00 PM', progress:75 },
-
-  { id:13, name:'Green Valley HOA', source:'form2', lp:'LP2',
-    phone:'(415) 555-9090', email:'hoa@greenvalley.com',
-    subject:'Commercial — full complex, 8 buildings, monthly contract',
-    value:1450, status:'scheduled', date:'Aug 12, 2024 9:00 AM',
-    address:'Green Valley Complex, Commercial', jobType:'Commercial',
-    windows:120, starred:true, notes:'Large contract. Aug 21 9AM start.', hasCall:false,
-    jobDate:'Aug 21, 9:00 AM', progress:75 },
-
-  // ── Completed ──
-  { id:14, name:'Sarah Morton', source:'form1', lp:'LP1',
-    phone:'(415) 555-1111', email:'s.morton@email.com',
-    subject:'Single-story residential, exterior only',
-    value:180, status:'completed', date:'Aug 10, 2024 9:00 AM',
-    address:'60 Oak St, Residential', jobType:'Residential',
-    windows:7, starred:false, notes:'Job done. Invoice paid.', hasCall:false, progress:100 },
-
-  { id:15, name:'Tom Wu', source:'call', lp:null,
-    phone:'(415) 555-2222', email:'tom.w@email.com',
-    subject:'Residential — inside & outside, 2-story',
-    value:350, status:'completed', date:'Aug 9, 2024 11:00 AM',
-    address:'44 Elm Ave', jobType:'Residential',
-    windows:16, duration:'1:50', starred:false, notes:'Completed. Left 5-star review.', hasCall:true, progress:100 },
-
-];
+let leads = [];
 
 let activeId  = null;
 let searchTerm = '';
