Add server-side Airtable API routes; fix live data loading on Vercel

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -805,21 +805,33 @@ function normaliseRecord(rec, idx) {
   };
 }
 
+const IS_LOCAL = window.location.protocol === 'file:' || window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+
 async function fetchAllFromAirtable() {
   showLoading(true);
-  const allRecords = [];
-  let offset = '';
   try {
-    do {
-      const url = `https://api.airtable.com/v0/${AT_BASE}/${AT_TABLE}?pageSize=100${offset ? '&offset=' + encodeURIComponent(offset) : ''}`;
-      const res = await fetch(url, { headers: { Authorization: `Bearer ${AT_TOKEN}` } });
-      if (!res.ok) throw new Error(`Airtable error: ${res.status}`);
-      const data = await res.json();
-      allRecords.push(...(data.records || []));
-      offset = data.offset || '';
-    } while (offset);
+    let allRecords = [];
 
-    // Normalise and sort newest first
+    if (IS_LOCAL) {
+      // Local: fetch directly from Airtable using config.js token
+      let offset = '';
+      do {
+        const url = `https://api.airtable.com/v0/${AT_BASE}/${AT_TABLE}?pageSize=100${offset ? '&offset=' + encodeURIComponent(offset) : ''}`;
+        const res = await fetch(url, { headers: { Authorization: `Bearer ${AT_TOKEN}` } });
+        if (!res.ok) throw new Error(`Airtable error: ${res.status}`);
+        const data = await res.json();
+        allRecords.push(...(data.records || []));
+        offset = data.offset || '';
+      } while (offset);
+    } else {
+      // Vercel: use server-side API route (token stays secure)
+      const res = await fetch('/api/leads');
+      if (!res.ok) throw new Error(`API error: ${res.status}`);
+      const data = await res.json();
+      if (data.error) throw new Error(data.error);
+      allRecords = data.records;
+    }
+
     leads = allRecords
       .map((r, i) => normaliseRecord(r, i))
       .sort((a, b) => b.dateObj - a.dateObj);
@@ -1122,12 +1134,22 @@ function changeStatus(id, status) {
   if (l.airtableId) {
     const atStatusMap = { new:'New', contacted:'Contacted', quoted:'Quoted',
                           scheduled:'Scheduled', completed:'Completed', lost:'Lost' };
-    fetch(`https://api.airtable.com/v0/${AT_BASE}/${AT_TABLE}/${l.airtableId}`, {
-      method: 'PATCH',
-      headers: { Authorization: `Bearer ${AT_TOKEN}`, 'Content-Type': 'application/json' },
-      body: JSON.stringify({ fields: { 'Lead Status': atStatusMap[status] } })
-    }).then(() => showToast('Status saved to Airtable ✓'))
-      .catch(() => showToast('Status updated locally (Airtable sync failed)'));
+    const atFields = { 'Lead Status': atStatusMap[status] };
+    if (IS_LOCAL) {
+      fetch(`https://api.airtable.com/v0/${AT_BASE}/${AT_TABLE}/${l.airtableId}`, {
+        method: 'PATCH',
+        headers: { Authorization: `Bearer ${AT_TOKEN}`, 'Content-Type': 'application/json' },
+        body: JSON.stringify({ fields: atFields })
+      }).then(() => showToast('Status saved to Airtable ✓'))
+        .catch(() => showToast('Status updated locally (Airtable sync failed)'));
+    } else {
+      fetch('/api/update-lead', {
+        method: 'PATCH',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ airtableId: l.airtableId, fields: atFields })
+      }).then(() => showToast('Status saved to Airtable ✓'))
+        .catch(() => showToast('Status updated locally (Airtable sync failed)'));
+    }
   }
 }
 
